# CAD_knowledge_service

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  REACT_IMPROVEMENTS.md  README.md  chat.md  main.py  measure.py  pyproject.toml  requirements.txt  test.json  test.py  test_knowledge_extract.py  test_parse_pdf.py
RL/: __init__.py  config.yaml  config_ga.yaml  config_wiring.yaml  env.py  eval_compare.py  eval_wiring_compare.py  ga_layout.py  generate_uniform_layout_json.py  model.py  model_structure.md  reward.py  room_generator.py  split_dataset.py  split_wiring_dataset.py  train.py  train_multi.py  train_wiring.py  visualize.py  wiring_article_visu.py  wiring_dataset_gen.py  wiring_env.py  wiring_model.py
agent/: __init__.py  agent_ds.md  approval.py  base.py  chat.py  config.example.yaml  config.py  factory.py  image_process.py  logger.py  memory.py  mini_model.py  model_clients.py  plan.py  react_agent.py  run.py  state.py  tools.py  utils.py
article/: add_room_legend.py  compile_action_flow.sh  compile_encoder.sh  compile_mask_sampling.sh  compile_other.sh  compile_policy.sh  compile_value.sh  compile_wiring.sh  plot_action_flow.py  plot_astar_prim_mst.py  plot_astar_vs_dijkstra.py  plot_channel_simple.py  plot_encoder.py  plot_incremental_tree.py  plot_mask_sampling.py  plot_mask_sampling_matplotlib.py  plot_matrix_ASCII.py  plot_other.py  plot_policy.py  plot_reward_demo.py  plot_value.py  plot_wavefront.py  plot_wiring.py  plot_wiring_channels_example.py  visualize_model.py
eval/: baselines.py  build_multihop_dataset.py  dataset_builder.py  llm_rewrite.py  llm_rewrite_2.py  metrics.py  run_eval.py
example_jupyter/: llama_reader.ipynb
graph/: env.py  (+4 more)
(+45 files in other folders)
