[project]
name = "autocad-ragserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mineru[all]>=2.7.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.4",
]
