[project]
name = "autocad-ragserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mineru[all]>=2.7.3",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "sentence-transformers>=2.7.0",
    "opencv-python>=4.12.0.88",
    "paddleocr[all]==3.2.0",
    "paddlepaddle==3.1.1",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.4",
    "neo4j>=5.26.0",
    "openai>=1.40.0",
    "llama-index>=0.12.42",
    "llama-index-llms-deepseek>=0.2.0",
    "llama-index-llms-dashscope>=0.4.1",
    "anthropic>=0.84.0",
    "rank-bm25>=0.2.2",
    "bm25s>=0.3.2.post1",
    "jieba>=0.42.1",
    "torchview>=0.2.7",
]
